--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 actix-cors = "0.7.1"
 actix-web = "4.11.0"
+display_full_error = "1.1.0"
 hex = "0.4.3"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 sha2 = "0.10.9"
 toml = { version = "0.8.23", features = ["parse"] }
+uuid = { version = "1.17.0", features = ["v4"] }
